--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_rating_bar: 4.0.1
   go_router: 11.1.2
   flutter_riverpod: ^2.4.1
+  rxdart: ^0.27.7
 
 dev_dependencies:
   flutter_test:
